<resources>
    <string name="app_name">Igor</string>
    <string name="facebook_app_id">1637797732959755</string>
    <string name="fb_login_protocol_scheme">fb1637797732959755</string>

    //Strings da tela de login
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="manter_me_conectado">manter-me conectado</string>
    <string name="criar_conta">criar conta</string>
    <string name="esqueci_minha_senha">esqueci minha senha</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="entrar">Entrar</string>
    <string name="yyyy">YYYY</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="outro">Outro</string>
    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    //Toolbar
    <string name="editar">Editar</string>
    <string name="ordenar">Ordenar</string>
    
    //Navigation Drawer
    <string name="nav_drawer_adventures">Aventuras</string>
    <string name="nav_drawer_books">Livros</string>
    <string name="nav_drawer_account">Conta</string>
    <string name="nav_drawer_notifications">Notificações</string>
    <string name="nav_drawer_settings">Configurações</string>
    <string name="nav_drawer_exit">Sair</string>

    //Nova aventura
    <string name="criar_aventura">Criar Aventura</string>
    <string name="d_um_nome_para_a_sua_aventura">Dê um nome à sua aventura</string>
    <string name="edit_nome_aventura">Nome da aventura</string>
    <string name="descr_aventura">Descrição da aventura, se tiver mais de uma linha ele ocupa esse espaço</string>

    //Edicao da aventura
    <string name="editar_sua_aventura">Editar sua aventura</string>

    //Sessão
    <string name="new_session_subtitle">Dê um nome a próxima sessão</string>
    <string name="new_session_title">Criar Sessão</string>
    <string name="new_session_placeholder">Nome da sessão, se tiver duas linhas ele ocupa esse espaço</string>
    <string name="nenhuma_descri_o">Nenhuma descrição</string>

    //Novo jogador
    <string name="new_player_title">Adicionar Jogador</string>
    <string name="new_player_subtitle">Informe o nickname do jogador</string>

</resources>
