<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground_640">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/caixa"
            android:layout_width="297dp"
            android:layout_height="280dp"
            android:src="@drawable/cadastrocaixa_280"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#ffff"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintTop_toTopOf="@id/caixa"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textPersonName"
            android:textColor="#ffff"
            android:hint="@string/nome_de_usu_rio"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="text|datetime"
            android:textColor="#ffff"
            android:hint="@string/data_de_nascimento"
            android:maxLines="1"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:backgroundTint="@android:color/white"
            android:inputType="textAutoComplete"
            android:textColor="#ffff"
            android:hint="@string/sexo"
            android:maxLines="1"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@+id/data"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/cadastrobutton"
            android:scaleType="fitCenter"
            android:layout_width="82dp"
            android:layout_height="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginTop="20dp"
            android:src="@drawable/newadv_pronto_60"
            android:contentDescription="@string/entrar"
            app:layout_constraintRight_toRightOf="@id/sexo"
            app:layout_constraintTop_toBottomOf="@+id/sexo" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>