<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.yimobile.igor.RegisterFragment">

    <ImageView
        android:layout_width="289dp"
        android:layout_height="280dp"
        android:src="@drawable/cadastrocaixa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:id="@+id/caixa"
        app:layout_constraintHorizontal_bias="0.505" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="#ffff"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/caixa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:backgroundTint="@android:color/white"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:hint="@string/senha"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:backgroundTint="@android:color/white"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:hint="@string/nome_de_usu_rio"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:backgroundTint="@android:color/white"
        android:inputType="text|datetime"
        android:textColor="#ffff"
        android:hint="@string/data_de_nascimento"
        app:layout_constraintTop_toBottomOf="@+id/nome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:backgroundTint="@android:color/white"
        android:inputType="textAutoComplete"
        android:textColor="#ffff"
        android:hint="@string/sexo"
        app:layout_constraintTop_toBottomOf="@+id/data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/cadastrobutton"
        android:scaleType="fitCenter"
        android:layout_width="82dp"
        android:layout_height="30dp"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="5dp"
        android:drawableTop="@drawable/cadastrobutton_30"
        app:layout_constraintRight_toRightOf="@id/sexo"
        app:layout_constraintTop_toBottomOf="@+id/sexo" />

    <ImageView
        android:layout_width="26dp"
        android:layout_height="15dp"
        android:src="@drawable/loginatention"
        android:id="@+id/atentionemail"
        android:layout_marginTop="14dp"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <ImageView
        android:layout_width="26dp"
        android:layout_height="15dp"
        android:src="@drawable/loginatention"
        android:id="@+id/atentionsenha"
        android:layout_marginTop="14dp"
        app:layout_constraintRight_toRightOf="@+id/senha"
        app:layout_constraintTop_toTopOf="@+id/senha" />


</android.support.constraint.ConstraintLayout>